@@ -1,0 +1,35 @@
+.\"
+.\"  decode-vaio.1 - manpage for the i2c-tools/decode-vaio utility
+.\"  Copyright (C) 2013  Jaromir Capik
+.\"
+.\"  This program is free software; you can redistribute it and/or modify
+.\"  it under the terms of the GNU General Public License as published by
+.\"  the Free Software Foundation; either version 2 of the License, or
+.\"  (at your option) any later version.
+.\"
+.\"  This program is distributed in the hope that it will be useful,
+.\"  but WITHOUT ANY WARRANTY; without even the implied warranty of
+.\"  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+.\"  GNU General Public License for more details.
+.\"
+.\"  You should have received a copy of the GNU General Public License along
+.\"  with this program; if not, write to the Free Software Foundation, Inc.,
+.\"  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+.\"
+.TH decode-vaio 1 "Oct 2013" "i2c-tools" "User Commands"
+.SH NAME
+decode-vaio \- decode the information found in the Sony Vaio laptop
+identification EEPROMs
+.SH SYNOPSIS
+.B decode-vaio
+.SH DESCRIPTION
+
+The purpose of the
+.B decode-vaio
+tool is to decode the information found in the Sony Vaio laptop
+identification EEPROMs.
+The tool requires the eeprom kernel module to be loaded.
+.SH SEE ALSO
+.BR decode-dimms (1)
+.SH AUTHOR
+Jean Delvare
